now using input component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -64,3 +64,5 @@ select {
 @import "./App.scss";
 @import "./Loader.scss";
 @import "./Car.scss";
+@import "./Input.scss";
+@import "./Button.scss";
